tests/parser/expr_parser/snapshots/r#mod__parser__expr_parser__identifier_parser__parse_func_access_to_identifier.snap
---
source: tests/parser/expr_parser/identifier_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 21,
        },
        kind: GlobalConst {
            name: "value",
            value_type: None,
            def_val: [
                ExprToken {
                    range: Range {
                        start: 12,
                        end: 15,
                    },
                    kind: Identifier(
                        "num",
                    ),
                },
                ExprToken {
                    range: Range {
                        start: 15,
                        end: 16,
                    },
                    kind: Dot,
                },
                ExprToken {
                    range: Range {
                        start: 16,
                        end: 21,
                    },
                    kind: FuncCall {
                        name: "new",
                        args: [],
                    },
                },
            ],
        },
    },
]
