tests/parser/expr_parser/snapshots/r#mod__parser__expr_parser__identifier_parser__parse_identifier_access_to_func.snap
---
source: tests/parser/expr_parser/identifier_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 23,
        },
        kind: GlobalConst {
            name: "value",
            value_type: None,
            def_val: [
                ExprToken {
                    range: Range {
                        start: 12,
                        end: 17,
                    },
                    kind: FuncCall {
                        name: "new",
                        args: [],
                    },
                },
                ExprToken {
                    range: Range {
                        start: 17,
                        end: 18,
                    },
                    kind: Dot,
                },
                ExprToken {
                    range: Range {
                        start: 18,
                        end: 23,
                    },
                    kind: Identifier(
                        "first",
                    ),
                },
            ],
        },
    },
]
